FIX : Chatting-drawer z-index set

--- a/frontend/src/styles/ChattingDrawer.scss
+++ b/frontend/src/styles/ChattingDrawer.scss
@@ -1,7 +1,6 @@
 $ChattingDrawerWidth: 500px;
 
 #ChattingDrawer {
-  z-index: 0;
   width: $ChattingDrawerWidth;
   height: 100%;
   flex-shrink: 0;
@@ -11,6 +10,7 @@ $ChattingDrawerWidth: 500px;
   }
 
   #header {
+    z-index: 0;
     height: 5%;
     font-size: 20px;
 
@@ -20,6 +20,7 @@ $ChattingDrawerWidth: 500px;
   }
 
   #body {
+    z-index: 0;
     height: 90%;
     padding: 3%;
 
