--- a/frontend/src/styles/Game.scss
+++ b/frontend/src/styles/Game.scss
@@ -94,6 +94,7 @@ $paddle_height: 150px;
 }
 
 #GameReady {
+  z-index: 1;
   width: 100%;
   height: 105%;
   row-gap: 5%;
@@ -101,6 +102,7 @@ $paddle_height: 150px;
 }
 
 #GamePlay {
+  z-index: 1;
   width: 100%;
   height: 100%;
   display: flex;
